Correctif contrast

--- a/style.css
+++ b/style.css
@@ -828,7 +828,7 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots-bg.png");
+    background-image: url("img/agence-la-panthere.jpg");
 }
 
 .bg-banniere {
@@ -1105,6 +1105,10 @@ h4 {
 
 .bold {
     font-weight: bold;
-    font-size: 17px;
+    font-size: 20px;
 }
 
+.invite {
+    font-size: 38px;
+    color: #f3976c !important;
+}
